@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: stats.h,v 1.5.18.2 2005/04/29 00:16:22 marka Exp $ */
+/* $Id: stats.h,v 1.5.18.3 2005/06/17 02:04:33 marka Exp $ */
 
 #ifndef DNS_STATS_H
 #define DNS_STATS_H 1
@@ -33,10 +33,11 @@ typedef enum {
 	dns_statscounter_nxrrset = 2,    /*%< NXRRSET result */
 	dns_statscounter_nxdomain = 3,   /*%< NXDOMAIN result */
 	dns_statscounter_recursion = 4,  /*%< Recursion was used */
-	dns_statscounter_failure = 5     /*%< Some other failure */
+	dns_statscounter_failure = 5,    /*%< Some other failure */
+	dns_statscounter_duplicate = 6   /*%< Duplicate query */
 } dns_statscounter_t;
 
-#define DNS_STATS_NCOUNTERS 6
+#define DNS_STATS_NCOUNTERS 7
 
 LIBDNS_EXTERNAL_DATA extern const char *dns_statscounter_names[];
 
