@@ -1,3 +1,7 @@
+1887.	[func]		Detect duplicates of UDP queries we are recursing on
+			and drop them.  New stats category "duplicates".
+			[RT #2471]
+
 1886.	[bug]		Fix unreasonably low quantum on call to
 			dns_rbt_destroy2().  Remove unnecessay unhash_node()
 			call. [RT #14919]
